--- a/index.html
+++ b/index.html
@@ -17,9 +17,13 @@
             <div class="input">
                 <div>
                     <span>Width</span>
-                    <input id="c-width" type="number" value="11" />
+                    <input id="c-width" type="number"/>
                     <span>Height</span>
-                    <input id="c-height" type="number" value="11" />
+                    <input id="c-height" type="number"/>
+                </div>
+                <div>
+                    <span>Force Symmetry</span>
+                    <input type="checkbox" checked disabled />
                 </div>
                 <button id="recenter-btn">Recenter</button>
                 <div>
@@ -32,7 +36,7 @@
                 </div>
                 <div>
                     <div>Canvas Scale</div>
-                    <input id="c-scale" type="range" value="20" title="0"/>                    
+                    <input id="c-scale" type="range" title="1"/>                    
                 </div>
             </div>
         </div>
